--- a/app/src/main/res/layout/activity_registeration.xml
+++ b/app/src/main/res/layout/activity_registeration.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kushal.firebasedatabase2auth.RegisterationActivity">
+    tools:context="com.kushal.firebasedatabase2auth.RegisterationActivity"
+    android:background="@color/colorToolbar">
 
     <RelativeLayout
         android:layout_width="368dp"
