--- a/app/src/main/res/layout/content_activity.xml
+++ b/app/src/main/res/layout/content_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorToolbar">
 
 
     <EditText
@@ -46,15 +47,13 @@
         android:hint="email.."
         android:inputType="textPersonName" />
 
-    <Button
+    <at.markushi.ui.CircleButton
         android:id="@+id/infobtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="info"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@color/colorAccent"/>
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/emfbtxt"
