--- a/app/src/main/res/layout/activity_registeration.xml
+++ b/app/src/main/res/layout/activity_registeration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.kushal.firebasedatabase2auth.RegisterationActivity"
-    android:background="@color/colorToolbar">
+    android:background="@drawable/backwallpaper">
 
     <RelativeLayout
         android:layout_width="368dp"
