--- a/app/src/main/res/layout/content_activity.xml
+++ b/app/src/main/res/layout/content_activity.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorToolbar">
+    android:background="@drawable/backwallpaper">
 
 
     <EditText
@@ -47,13 +47,6 @@
         android:hint="email.."
         android:inputType="textPersonName" />
 
-    <at.markushi.ui.CircleButton
-        android:id="@+id/infobtn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/emfbtxt"
@@ -64,4 +57,13 @@
         android:layout_below="@+id/fbtxt"
         android:textSize="30sp"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/infobtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="info"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
