--- a/app/src/main/res/layout/activity_registeration.xml
+++ b/app/src/main/res/layout/activity_registeration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.kushal.firebasedatabase2auth.RegisterationActivity"
-    android:background="@drawable/backwallpaper">
+    android:background="@drawable/flatwallpaper">
 
     <RelativeLayout
         android:layout_width="368dp"
@@ -18,46 +18,54 @@
             android:id="@+id/emailTB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="99dp"
+            android:layout_marginTop="20dp"
             android:ems="10"
             android:hint="Enter email..."
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:paddingBottom="20dp"
+            android:layout_below="@+id/imageView"
+            android:layout_alignLeft="@+id/nameTB"
+            android:layout_alignStart="@+id/nameTB"
+            android:background="@android:color/white"
+
+           />
 
         <EditText
             android:id="@+id/passTB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/emailTB"
-            android:layout_alignStart="@+id/emailTB"
-            android:layout_below="@+id/emailTB"
-            android:layout_marginTop="64dp"
+            android:layout_alignLeft="@+id/nameTB"
+            android:layout_alignStart="@+id/nameTB"
+            android:layout_below="@+id/nameTB"
+            android:layout_marginTop="24dp"
             android:ems="10"
             android:hint="password.."
-            android:inputType="textPassword" />
+            android:paddingBottom="20dp"
+            android:background="@android:color/white"
+            android:inputType="textPassword"
+           />
 
         <Button
             android:id="@+id/signUpbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="98dp"
-            android:background="?android:attr/colorFocusedHighlight"
-            android:text="SIGNUP"
             android:layout_below="@+id/passTB"
+            android:layout_marginEnd="14dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginTop="98dp"
             android:layout_toLeftOf="@+id/imageView"
             android:layout_toStartOf="@+id/imageView"
-            android:layout_marginRight="14dp"
-            android:layout_marginEnd="14dp" />
+            android:background="?android:attr/colorFocusedHighlight"
+            android:text="SIGNUP" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:srcCompat="@drawable/firebaselogo"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="29dp" />
+            android:layout_marginTop="29dp"
+            app:srcCompat="@drawable/firebaselogo" />
 
         <Button
             android:id="@+id/signinBtn"
@@ -66,8 +74,24 @@
             android:layout_alignTop="@+id/signUpbtn"
             android:layout_toEndOf="@+id/imageView"
             android:layout_toRightOf="@+id/imageView"
-            android:background="@android:color/holo_orange_dark"
+            android:background="@color/colorToolbar"
             android:text="SIGN IN" />
+
+        <EditText
+            android:id="@+id/nameTB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:ems="10"
+            android:hint="Enter your name.."
+            android:inputType="textPersonName"
+            android:paddingBottom="20dp"
+            android:layout_below="@+id/emailTB"
+            android:background="@android:color/white"
+            android:layout_centerHorizontal="true"
+
+            />
     </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
