--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorToolbar">#f39c12</color>
+
+    <color name="background">#34495e</color>
 </resources>
