--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorToolbar">#f39c12</color>
 
     <color name="background">#34495e</color>
+    <color name="darker">#d35400</color>
 </resources>
